--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3 || ^8.0",
-        "codeigniter4/framework": "^4",
+        "codeigniter4/framework": "4.1.9",
         "hermawan/codeigniter4-datatables": "^0.5.4",
         "jason-napolitano/codeigniter4-cart-module": "^1.1",
         "dompdf/dompdf": "^1.2"
